# dr-model

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: smoke.yml
examples/: README.md  sample_bench_haiku.json  sample_bench_haiku_broken.json  sample_bench_opus.json
src/bench_by_execution/: __init__.py  cli.py  contract.py  executor.py  harness.py
src/bench_by_execution/tasks/: __init__.py  public.py
tests/: test_smoke.py
